// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Section /> it renders a dark Section 1`] = `
<div>
  <div
    class="sc-gEvEer hwxRvZ"
  >
    this is a Button 
    dark
     
  </div>
</div>
`;

exports[`<Section /> it renders a default Section 1`] = `
<div>
  <div
    class="sc-gEvEer hpVpdb"
  >
    this is a Button 
    default
     
  </div>
</div>
`;

exports[`<Section /> it renders a light Section 1`] = `
<div>
  <div
    class="sc-gEvEer hBVizu"
  >
    this is a Button 
    light
     
  </div>
</div>
`;

exports[`<Section /> it renders a white Section 1`] = `
<div>
  <div
    class="sc-gEvEer eEOWTk"
  >
    this is a Button 
    white
     
  </div>
</div>
`;

exports[`<Section /> renders large decorated section 1`] = `
<div>
  <div
    class="sc-gEvEer fhUQTO"
  >
    <div
      class="sc-eqUAAy esbjkt"
    />
    <div
      class="sc-dcJsrY gQPQLH"
    >
      A decorated dark section
    </div>
  </div>
</div>
`;

exports[`<Section /> renders with correct decoration 1`] = `
<div>
  <div
    class="sc-gEvEer cHLyxF"
  >
    <div
      class="sc-eqUAAy esbjkt"
    />
    <div
      class="sc-dcJsrY gQPQLH"
    >
      A decorated dark section
    </div>
  </div>
</div>
`;
